1.17.1 support
convert to java 8